--- a/yaml/cookbook/00_datakit_dataset_ele.yml
+++ b/yaml/cookbook/00_datakit_dataset_ele.yml
@@ -626,6 +626,37 @@ ele_daily_env:
 #      keep_result: true
       name: ele_day_34_std
     - cooks:
+        - fetch_dataset:
+            columns:
+              - 团队ID
+              - 团队名称
+              - 骑手ID
+              - 骑手名称
+              - 业务类型
+              - 详情
+              - 订单号
+            dataset_cate: raw
+            template_code: ele_day_34
+            rename:
+              团队ID: 站点ID
+              团队名称: 站点名称
+        - set_meta_month_column:
+            - month
+        - str_strip_column:
+            - 订单号
+        - df_select:
+            - '([业务类型] == @p1) & ([详情] in @p2)'
+            - p1: 配送收入
+              p2: [差评,完成单,完成单-超时]
+        - df_groupby:
+            by: [站点ID,站点名称, 骑手ID, 骑手名称]
+        - df_count:
+            column: 订单号
+            rename: 完成单量
+        - df_reset_index: []
+      sync_result: true
+      name: ele_day_34_std_ext
+    - cooks:
         - use_df:
             key: ele_day_34_std
             columns: [账单时间, 站点ID, 骑手ID, 运单号, 订单号]
