--- a/yaml/cookbook/mt.yml
+++ b/yaml/cookbook/mt.yml
@@ -15,13 +15,13 @@ ele_daily_env:
       sync_result: true
       cooks:
         - fetch_dataset:
-            template_code: downloadFranchiseeGrade
+            template_code: mt_day_13
             dataset_cate: raw
             datakit_pull_way: last_day
             ignore_null_error: true
             empty_df_record:
               加盟站ID: '-'
-              站点名称: '-'
+              加盟站名称: '-'
               完成单(未剔除异常单): 0
               星级: 0
               得分: 0
@@ -32,15 +32,15 @@ ele_daily_env:
               一般超时单量(考核): 0
               严重超时单量(考核): 0
               提前点送达率(复合): 0
-              提前点送达率(复合): 0
               15分钟超时订单占比: 0
               不满意率: 0
               配送原因未完成率: 0
               复合准时率（考核）: 0
               meta_day: 0
+              meta_month: 0
             columns:
               - 加盟站ID
-              - 站点名称
+              - 加盟站名称
               - 完成单(未剔除异常单)
               - 星级
               - 得分
@@ -51,15 +51,15 @@ ele_daily_env:
               - 一般超时单量(考核)
               - 严重超时单量(考核)
               - 提前点送达率(复合)
-              - 提前点送达率(复合)
               - 15分钟超时订单占比
               - 不满意率
               - 配送原因未完成率
               - 复合准时率（考核）
               - meta_day
+              - meta_month
             rename:
               加盟站ID: vendor_dc_id
-              站点名称: dc_name
+              加盟站名称: dc_name
               完成单(未剔除异常单): total_order
               星级: star_level
               得分: total_score
@@ -69,32 +69,48 @@ ele_daily_env:
               配送原因未完成数: unfinished_orders
               一般超时单量(考核): ordinary_over_time_orders
               严重超时单量(考核): serious_over_time_orders
-              提前点送达率(复合): serious_over_time_orders
               提前点送达率(复合): advance_delivery_ratio
               15分钟超时订单占比: over_15_ratio
               不满意率: dissatisfy_ratio
               配送原因未完成率: unfinished_ratio
               复合准时率（考核）: punctuality_ratio
+              meta_day: book_day
+              meta_month: book_month
         - add_cols:
             - advance_delivery_score: 0
+        - add_cols:
             - over_15_ratio_score: 0
+        - add_cols:
             - dissatisfy_ratio_score: 0
+        - add_cols:
             - unfinished_ratio_score: 0
+        - add_cols:
             - punctuality_ratio_score: 0
+        - add_cols:
             - avg_daily_order: 0
+        - add_cols:
             - punctuality_contains: 0
+        - add_cols:
             - punctuality_surplus: 0
+        - add_cols:
             - advance_delivery_contains: 0
+        - add_cols:
             - advance_delivery_surplus: 0
+        - add_cols:
             - over_15_contains: 0
+        - add_cols:
             - over_15_surplus: 0
+        - add_cols:
             - dissatisfy_contains: 0
+        - add_cols:
             - dissatisfy_surplus: 0
+        - add_cols:
             - unfinished_contains: 0
+        - add_cols:
             - unfinished_surplus: 0
         - stash_push_df: []
         - fetch_dataset:
-            template_code: kaohemingxi
+            template_code: mt_month_62
             dataset_cate: raw
             datakit_pull_way: last_day
             ignore_null_error: true
@@ -159,33 +175,38 @@ ele_daily_env:
             - 当月总天数
         - run_py:
             - |
-                df['days'] = df['meta_day'].map(str).str[6:].map(int)
-                result = df
+                df=to_df(df)
+                df['days'] = df['book_day'].map(str).str[6:].map(int)
+                result = to_dd(df)
         - push_dataset:
             key: mt_kpi_detail_mini
 ###提前点送达得分
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] >= [X4]'
         - df_eval:
             - '[oadvance_delivery_score] = 0'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [X4] & [advance_delivery_ratio] >= [Y4]'
         - df_eval:
             - '[oadvance_delivery_score] = 100* ([advance_delivery_ratio]-[X4])/([Y4]-[X4])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Y4] & [advance_delivery_ratio] >= [Z4]'
         - df_eval:
             - '[oadvance_delivery_score] = 100+20* ([advance_delivery_ratio]-[Y4])/([Z4]-[Y4])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Z4]'
         - df_eval:
@@ -197,28 +218,32 @@ ele_daily_env:
         - push_dataset:
             key: mt_kpi_detail_mini
 ###15分钟超时占比得分
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] >= [X5]'
         - df_eval:
             - '[oadvance_delivery_score] = 0'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [X5] & [advance_delivery_ratio] >= [Y5]'
         - df_eval:
             - '[oadvance_delivery_score] = 100* ([advance_delivery_ratio]-[X5])/([Y5]-[X5])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Y5] & [advance_delivery_ratio] >= [Z5]'
         - df_eval:
             - '[oadvance_delivery_score] = 100+20* ([advance_delivery_ratio]-[Y5])/([Z5]-[Y5])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Z5]'
         - df_eval:
@@ -231,28 +256,32 @@ ele_daily_env:
             key: mt_kpi_detail_mini
 
 ###不满意率得分
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] >= [X3]'
         - df_eval:
             - '[oadvance_delivery_score] = 0'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [X3] & [advance_delivery_ratio] >= [Y3]'
         - df_eval:
             - '[oadvance_delivery_score] = 100* ([advance_delivery_ratio]-[X3])/([Y3]-[X3])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Y3] & [advance_delivery_ratio] >= [Z3]'
         - df_eval:
             - '[oadvance_delivery_score] = 100+20* ([advance_delivery_ratio]-[Y3])/([Z3]-[Y3])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Z3]'
         - df_eval:
@@ -264,28 +293,32 @@ ele_daily_env:
         - push_dataset:
             key: mt_kpi_detail_mini
 ###配送原因未完成率得分
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] >= [X2]'
         - df_eval:
             - '[oadvance_delivery_score] = 0'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [X2] & [advance_delivery_ratio] >= [Y2]'
         - df_eval:
             - '[oadvance_delivery_score] = 100* ([advance_delivery_ratio]-[X2])/([Y2]-[X2])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Y2] & [advance_delivery_ratio] >= [Z2]'
         - df_eval:
             - '[oadvance_delivery_score] = 100+20* ([advance_delivery_ratio]-[Y2])/([Z2]-[Y2])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] < [Z2]'
         - df_eval:
@@ -298,28 +331,32 @@ ele_daily_env:
             key: mt_kpi_detail_mini
 
 ###复合准时率得分
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] <= [X1]'
         - df_eval:
             - '[oadvance_delivery_score] = 0'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] > [X1] & [advance_delivery_ratio] <= [Y1]'
         - df_eval:
             - '[oadvance_delivery_score] = 100* ([advance_delivery_ratio]-[X1])/([Y1]-[X1])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] > [Y1] & [advance_delivery_ratio] <= [Z1]'
         - df_eval:
             - '[oadvance_delivery_score] = 100+20* ([advance_delivery_ratio]-[Y1])/([Z1]-[Y1])'
         - df_reset_index: []
         - stash_push_df: []
-        - use_df: mt_kpi_detail_mini
+        - use_df:
+            key: mt_kpi_detail_mini
         - df_select:
             - '[advance_delivery_ratio] > [Z1]'
         - df_eval:
@@ -340,7 +377,132 @@ ele_daily_env:
         - df_eval:
             - '[advance_delivery_contains] = [vg_daily_order]*[当月总天数]*[Z4]'
         - df_eval:
-            - '[advance_delivery_surplus] = [advance_delivery_contains] - 1*[advance_delivery_orders]'
+            - '[advance_delivery_surplus] = [advance_delivery_contains] - [advance_delivery_orders]'
+###15分钟超时单量（容错值）& 15分钟超时单量（余量）
+        - df_eval:
+            - '[over_15_contains] = [vg_daily_order]*[当月总天数]*[Z5]'
+        - df_eval:
+            - '[over_15_surplus] = [over_15_contains] - [over_15_orders]'
+###不满意单量（容错值）& 不满意单量（余量）
+        - df_eval:
+            - '[dissatisfy_contains] = [vg_daily_order]*[当月总天数]*[Z3]'
+        - df_eval:
+            - '[dissatisfy_surplus] = [dissatisfy_contains] - [dissatisfy_orders]'
+###配送原因未完成单量（容错值）& 配送原因未完成单量（余量）
+        - df_eval:
+            - '[unfinished_contains] = [vg_daily_order]*[当月总天数]*[Z2]'
+        - df_eval:
+            - '[unfinished_surplus] = [unfinished_contains] - [unfinished_orders]'
+### 得分
+        - run_py:
+            - |
+              df = to_df(df)
+              df['col_score_dict'] = '0'
+              df['col_score_dict'] = [u'[{"name":"提前点送达得分","score": "%s"},{"name":"15分钟超时占比得分","score": "%s"},{"name":"不满意率得分","score": "%s"},{"name":"配送原因未完成率得分","score": "%s"},{"name":"复核准时率得分","score": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['advance_delivery_score','over_15_ratio_score','dissatisfy_ratio_score','unfinished_ratio_score','punctuality_ratio_score']].to_dict(orient='split')['data'] ]
+              result = df
+### 考核得分
+        - run_py:
+            - |
+              df = to_df(df)
+              df['col_orders_dict'] = '0'
+              df['col_orders_dict'] = [u'[{"name":"提前点送达单量","orders": "%s"},{"name":"15分钟超时单量","orders": "%s"},{"name":"不满意单量","orders": "%s"},{"name":"配送原因未完成单量","orders": "%s"},{"name":"一般超时单量","orders": "%s"},{"name":"严重超时单量","orders": "%s"}]' % (a,b,c,d,e,f) for a,b,c,d,e,f in  df[['advance_delivery_orders','over_15_orders','dissatisfy_orders','unfinished_orders','ordinary_over_time_orders','serious_over_time_orders']].to_dict(orient='split')['data'] ]
+              result = df
+### 比率
+        - run_py:
+            - |
+              df = to_df(df)
+              df['col_ratio_dict'] = '0'
+              df['col_ratio_dict'] = [u'[{"name":"提前点送达率","ratio": "%s"},{"name":"15分钟超时率","ratio": "%s"},{"name":"不满意率","ratio": "%s"},{"name":"配送原因未完成率","ratio": "%s"},{"name":"复核准时率","ratio": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['advance_delivery_ratio','over_15_ratio','dissatisfy_ratio','unfinished_ratio','punctuality_ratio']].to_dict(orient='split')['data'] ]
+              result = df
+### 容错值
+        - run_py:
+            - |
+              df = to_df(df)
+              df['col_contains_dict'] = '0'
+              df['col_contains_dict'] = [u'[{"name":"复核配送准时（容错值）","contains": "%s"},{"name":"提前点送达单量（容错值）","contains": "%s"},{"name":"15分钟超时单量（容错值）","contains": "%s"},{"name":"不满意单量（容错值）","contains": "%s"},{"name":"配送原因未完成单量（容错值）","contains": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['punctuality_contains','advance_delivery_contains','over_15_contains','dissatisfy_contains','unfinished_contains']].to_dict(orient='split')['data'] ]
+              result = df
+### 余量
+        - run_py:
+            - |
+              df = to_df(df)
+              df['col_surplus_dict'] = '0'
+              df['col_surplus_dict'] = [u'[{"name":"复核配送准时（余量）","surplus": "%s"},{"name":"提前点送达单量（余量）","surplus": "%s"},{"name":"15分钟超时单量（余量）","surplus": "%s"},{"name":"不满意单量（余量）","surplus": "%s"},{"name":"配送原因未完成单量（余量）","surplus": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['punctuality_surplus','advance_delivery_surplus','over_15_surplus','dissatisfy_surplus','dissatisfy_surplus']].to_dict(orient='split')['data'] ]
+              result = df
 
 
 
+
+    - name: knight_detail
+      sync_result: true
+      cooks:
+        - fetch_dataset:
+            template_code: mt_day_18
+            dataset_cate: raw
+            ignore_null_error: true
+            empty_df_record:
+              骑手ID: '-'
+              骑手: '-'
+              站点ID: '-'
+              站点: '-'
+              骑手接单量: 0
+              完成单量: 0
+              在岗时长: 0
+              meta_day: 0
+              meta_month: 0
+            columns:
+              - 骑手ID
+              - 骑手
+              - 站点ID
+              - 站点
+              - 骑手接单量
+              - 完成单量
+              - 在岗时长
+              - meta_day
+              - meta_month
+            rename:
+              骑手ID: knight_id
+              骑手: knight_name
+              站点ID: vendor_dc_id
+              站点: dc_name
+              完成单量: avg_daily_order
+              在岗时长: on_guard_time
+              meta_day: book_day
+              meta_month: book_month
+        - add_cols:
+            - attendance: 0 #出勤率
+        - add_cols:
+            - avg_daily_order_std_line: 9
+        - add_cols:
+            - on_guard_time_std_line: 180
+        - add_cols:
+            - attendance_std_line: 0.75
+        - run_py:
+            - |
+                df=to_df(df)
+                df['max_days']=df['book_day'].max()
+                df['days'] = df['max_days'].map(str).str[6:].map(int)
+                result = to_dd(df)
+        - push_dataset:
+            key: mt_day_18_knight_detail
+###骑手出勤率
+        - use_df:
+            key: mt_day_18_knight_detail
+        - stash_push_df: []
+        - use_df:
+            key: mt_day_18_knight_detail
+        - add_cols:
+            - 出勤天数: 1
+        - df_select:
+            - '[avg_daily_order] > 0'
+        - df_groupby:
+            by: [vendor_dc_id,knight_id]
+        - df_sum:
+            column: [出勤天数]
+        - df_reset_index: []
+        - stash_push_df: []
+        - stash_join_df:
+            on: [vendor_dc_id,knight_id]
+            how: right
+            drop_stash: true
+        - df_eval:
+            - '[attendance] = [出勤天数] / [days]'
