--- a/yaml/cookbook/tset.yml
+++ b/yaml/cookbook/tset.yml
@@ -1,35 +1,397 @@
 - fetch_dataset:
-    columns:
-      - 团队ID
-      - 团队名称
-      - 骑手ID
-      - 骑手名称
-      - 业务类型
-      - 详情
-      - 订单号
+    template_code: mt_day_13
     dataset_cate: raw
-    template_code: ele_day_34
+    datakit_pull_way: last_day
+    ignore_null_error: true
+    empty_df_record:
+      加盟站ID: '-'
+      加盟站名称: '-'
+      完成单(未剔除异常单): 0
+      星级: 0
+      得分: 0
+      提前点送达订单数: 0
+      15分钟超时订单数: 0
+      不满意订单数: 0
+      配送原因未完成数: 0
+      一般超时单量(考核): 0
+      严重超时单量(考核): 0
+      提前点送达率(复合): 0
+      15分钟超时订单占比: 0
+      不满意率: 0
+      配送原因未完成率: 0
+      复合准时率（考核）: 0
+      meta_day: 0
+      meta_month: 0
+    columns:
+      - 加盟站ID
+      - 加盟站名称
+      - 完成单(未剔除异常单)
+      - 星级
+      - 得分
+      - 提前点送达订单数
+      - 15分钟超时订单数
+      - 不满意订单数
+      - 配送原因未完成数
+      - 一般超时单量(考核)
+      - 严重超时单量(考核)
+      - 提前点送达率(复合)
+      - 15分钟超时订单占比
+      - 不满意率
+      - 配送原因未完成率
+      - 复合准时率（考核）
+      - meta_day
+      - meta_month
     rename:
-      团队ID: 站点ID
-      团队名称: 站点
-      骑手名称: 骑手
-- set_meta_month_column:
-    - month
-- str_strip_column:
-    - 订单号
+      加盟站ID: vendor_dc_id
+      加盟站名称: dc_name
+      完成单(未剔除异常单): total_order
+      星级: star_level
+      得分: total_score
+      提前点送达订单数: advance_delivery_orders
+      15分钟超时订单数: over_15_orders
+      不满意订单数: dissatisfy_orders
+      配送原因未完成数: unfinished_orders
+      一般超时单量(考核): ordinary_over_time_orders
+      严重超时单量(考核): serious_over_time_orders
+      提前点送达率(复合): advance_delivery_ratio
+      15分钟超时订单占比: over_15_ratio
+      不满意率: dissatisfy_ratio
+      配送原因未完成率: unfinished_ratio
+      复合准时率（考核）: punctuality_ratio
+      meta_day: book_day
+      meta_month: book_month
+- df_head: []
+- add_cols:
+    - advance_delivery_score: 0
+- add_cols:
+    - over_15_ratio_score: 0
+- add_cols:
+    - dissatisfy_ratio_score: 0
+- add_cols:
+    - unfinished_ratio_score: 0
+- add_cols:
+    - punctuality_ratio_score: 0
+- add_cols:
+    - avg_daily_order: 0
+- add_cols:
+    - punctuality_contains: 0
+- add_cols:
+    - punctuality_surplus: 0
+- add_cols:
+    - advance_delivery_contains: 0
+- add_cols:
+    - advance_delivery_surplus: 0
+- add_cols:
+    - over_15_contains: 0
+- add_cols:
+    - over_15_surplus: 0
+- add_cols:
+    - dissatisfy_contains: 0
+- add_cols:
+    - dissatisfy_surplus: 0
+- add_cols:
+    - unfinished_contains: 0
+- add_cols:
+    - unfinished_surplus: 0
+- df_to_float:
+    - advance_delivery_score
+- df_to_float:
+    - over_15_ratio_score
+- df_to_float:
+    - dissatisfy_ratio_score
+- df_to_float:
+    - unfinished_ratio_score
+- df_to_float:
+    - punctuality_ratio_score
+- df_to_float:
+    - avg_daily_order
+- df_to_float:
+    - punctuality_contains
+- df_to_float:
+    - punctuality_surplus
+- df_to_float:
+    - advance_delivery_contains
+- df_to_float:
+    - advance_delivery_surplus
+- df_to_float:
+    - over_15_contains
+- df_to_float:
+    - over_15_surplus
+- df_to_float:
+    - dissatisfy_contains
+- df_to_float:
+    - dissatisfy_surplus
+- df_to_float:
+    - unfinished_contains
+- df_to_float:
+    - unfinished_surplus
+- df_to_float:
+    - advance_delivery_ratio
+- df_to_float:
+    - over_15_ratio
+- df_to_float:
+    - dissatisfy_ratio
+- df_to_float:
+    - unfinished_ratio
+- df_to_float:
+    - punctuality_ratio
+
+
+- stash_push_df: []
+- fetch_dataset:
+    template_code: mt_month_62
+    dataset_cate: raw
+    datakit_pull_way: last_day
+    ignore_null_error: true
+    empty_df_record:
+      加盟站ID: '-'
+      复合准时率X: 0
+      复合准时率Y: 0
+      复合准时率Z: 0
+      配送原因未完成率X: 0
+      配送原因未完成率Y: 0
+      配送原因未完成率Z: 0
+      不满意率X: 0
+      不满意率Y: 0
+      不满意率Z: 0
+      提前点送达率X: 0
+      提前点送达率Y: 0
+      提前点送达率Z: 0
+      15分钟超时订单占比X: 0
+      15分钟超时订单占比Y: 0
+      15分钟超时订单占比Z: 0
+    columns:
+      - 加盟站ID
+      - 加盟站ID
+      - 复合准时率X
+      - 复合准时率Y
+      - 复合准时率Z
+      - 配送原因未完成率X
+      - 配送原因未完成率Y
+      - 配送原因未完成率Z
+      - 不满意率X
+      - 不满意率Y
+      - 不满意率Z
+      - 提前点送达率X
+      - 提前点送达率Y
+      - 提前点送达率Z
+      - 15分钟超时订单占比X
+      - 15分钟超时订单占比Y
+      - 15分钟超时订单占比Z
+    rename:
+      加盟站ID: vendor_dc_id
+      复合准时率X: X1
+      复合准时率Y: Y1
+      复合准时率Z: Z1
+      配送原因未完成率X: X2
+      配送原因未完成率Y: Y2
+      配送原因未完成率Z: Z2
+      不满意率X: X3
+      不满意率Y: Y3
+      不满意率Z: Z3
+      提前点送达率X: X4
+      提前点送达率Y: Y4
+      提前点送达率Z: Z4
+      15分钟超时订单占比X: X5
+      15分钟超时订单占比Y: Y5
+      15分钟超时订单占比Z: Z5
+- run_py:
+    - |
+        df=to_df(df)
+        df['vendor_dc_id']='2028643'
+        df['X1']=0.855
+        df['Y1']=0.933
+        df['Z1']=0.982
+        df['X2']=0.002
+        df['Y2']=0.0002
+        df['Z2']=0.00004
+        df['X3']=0.00556
+        df['Y3']=0.00168
+        df['Z3']=0.00056
+        df['X4']=0.00035
+        df['Y4']=0.00018
+        df['Z4']=0.0001
+        df['X5']=0.064
+        df['Y5']=0.032
+        df['Z5']=0.0064
+        result=to_dd(df)
+- stash_push_df: []
+- stash_join_df:
+    how: right
+    on: vendor_dc_id
+    fillna: 0
+    drop_stash: True
+- set_meta_days_column:
+    - 当月总天数
+- run_py:
+    - |
+        df=to_df(df)
+        df['days'] = df['book_day'].map(str).str[6:].map(int)
+        result = to_dd(df)
+- push_dataset:
+    key: mt_kpi_detail_mini
+###提前点送达得分
+- use_df:
+    key: mt_kpi_detail_mini
 - df_select:
-    - '([业务类型] == @p1) & ([详情] in @p2)'
-    - p1: 配送收入
-      p2: [差评,完成单,完成单-超时]
-- df_groupby:
-    by: [站点ID,站点, 骑手ID, 骑手]
-- df_count:
-    column: 订单号
-    rename: 完成单量
-- df_reset_index: []
-- add_cols:
-    - 注册日期:
-- add_cols:
-    - 骑手接单量:
-- set_meta_month_column:
-    - month
+    - '[advance_delivery_ratio] >= [X4]'
+- df_eval:
+    - '[oadvance_delivery_score] = 0'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[advance_delivery_ratio] < [X4] & [advance_delivery_ratio] >= [Y4]'
+- df_eval:
+    - '[oadvance_delivery_score] = 100* ([advance_delivery_ratio]-[X4])/([Y4]-[X4])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[advance_delivery_ratio] < [Y4] & [advance_delivery_ratio] >= [Z4]'
+- df_eval:
+    - '[oadvance_delivery_score] = 100+20* ([advance_delivery_ratio]-[Y4])/([Z4]-[Y4])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[advance_delivery_ratio] < [Z4]'
+- df_eval:
+    - '[oadvance_delivery_score] = 120'
+- stash_push_df: []
+- stash_concat_df:
+    stash_drop: True
+- push_dataset:
+    key: mt_kpi_detail_mini
+###15分钟超时占比得分
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[over_15_ratio] >= [X5]'
+- df_eval:
+    - '[over_15_ratio_score] = 0'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[over_15_ratio] < [X5] & [over_15_ratio] >= [Y5]'
+- df_eval:
+    - '[over_15_ratio_score] = 100* ([over_15_ratio]-[X5])/([Y5]-[X5])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[over_15_ratio] < [Y5] & [over_15_ratio] >= [Z5]'
+- df_eval:
+    - '[over_15_ratio_score] = 100+20* ([over_15_ratio]-[Y5])/([Z5]-[Y5])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[over_15_ratio] < [Z5]'
+- df_eval:
+    - '[over_15_ratio_score] = 120'
+- stash_push_df: []
+- stash_concat_df:
+    stash_drop: True
+- push_dataset:
+    key: mt_kpi_detail_mini
+
+###不满意率得分
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[dissatisfy_ratio] >= [X3]'
+- df_eval:
+    - '[dissatisfy_ratio_score] = 0'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[dissatisfy_ratio] < [X3] & [dissatisfy_ratio] >= [Y3]'
+- df_eval:
+    - '[dissatisfy_ratio_score] = 100* ([dissatisfy_ratio]-[X3])/([Y3]-[X3])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[dissatisfy_ratio] < [Y3] & [dissatisfy_ratio] >= [Z3]'
+- df_eval:
+    - '[dissatisfy_ratio_score] = 100+20* ([dissatisfy_ratio]-[Y3])/([Z3]-[Y3])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[dissatisfy_ratio] < [Z3]'
+- df_eval:
+    - '[dissatisfy_ratio_score] = 120'
+- stash_push_df: []
+- stash_concat_df:
+    stash_drop: True
+- push_dataset:
+    key: mt_kpi_detail_mini
+###配送原因未完成率得分
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[unfinished_ratio] >= [X2]'
+- df_eval:
+    - '[unfinished_ratio_score] = 0'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[unfinished_ratio] < [X2] & [unfinished_ratio] >= [Y2]'
+- df_eval:
+    - '[unfinished_ratio_score] = 100* ([unfinished_ratio]-[X2])/([Y2]-[X2])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[unfinished_ratio] < [Y2] & [unfinished_ratio] >= [Z2]'
+- df_eval:
+    - '[unfinished_ratio_score] = 100+20* ([unfinished_ratio]-[Y2])/([Z2]-[Y2])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[unfinished_ratio] < [Z2]'
+- df_eval:
+    - '[unfinished_ratio_score] = 120'
+- stash_push_df: []
+- stash_concat_df:
+    stash_drop: True
+- push_dataset:
+    key: mt_kpi_detail_mini
+
+###复合准时率得分
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[punctuality_ratio] <= [X1]'
+- df_eval:
+    - '[punctuality_ratio_score] = 0'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[punctuality_ratio] > [X1] & [punctuality_ratio] <= [Y1]'
+- df_eval:
+    - '[punctuality_ratio_score] = 100* ([punctuality_ratio]-[X1])/([Y1]-[X1])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[punctuality_ratio] > [Y1] & [punctuality_ratio] <= [Z1]'
+- df_eval:
+    - '[punctuality_ratio_score] = 100+20* ([punctuality_ratio]-[Y1])/([Z1]-[Y1])'
+- stash_push_df: []
+- use_df:
+    key: mt_kpi_detail_mini
+- df_select:
+    - '[punctuality_ratio] > [Z1]'
+- df_eval:
+    - '[punctuality_ratio_score] = 120'
+- stash_push_df: []
+- stash_concat_df:
+    stash_drop: True
