--- a/yaml/cookbook/mt.yml
+++ b/yaml/cookbook/mt.yml
@@ -391,30 +391,30 @@ ele_daily_env:
             stash_drop: True
 ###日均单
         - df_eval:
-            - '[vg_daily_order] = [total_order]/[days]'
+            - '[avg_daily_order] = [total_order]/[days]'
 ###复合配送准时（容错值）& 复合配送准时（余量）
         - df_eval:
-            - '[punctuality_contains] = [vg_daily_order]*[当月总天数]*[Z1]'
+            - '[punctuality_contains] = [avg_daily_order]*[当月总天数]*[Z1]'
         - df_eval:
             - '[punctuality_surplus] = [punctuality_contains] - 1*[ordinary_over_time_orders] - 5*[serious_over_time_orders]'
 ###提前点送达单量（容错值）& 提前点送达单量（余量）
         - df_eval:
-            - '[advance_delivery_contains] = [vg_daily_order]*[当月总天数]*[Z4]'
+            - '[advance_delivery_contains] = [avg_daily_order]*[当月总天数]*[Z4]'
         - df_eval:
             - '[advance_delivery_surplus] = [advance_delivery_contains] - [advance_delivery_orders]'
 ###15分钟超时单量（容错值）& 15分钟超时单量（余量）
         - df_eval:
-            - '[over_15_contains] = [vg_daily_order]*[当月总天数]*[Z5]'
+            - '[over_15_contains] = [avg_daily_order]*[当月总天数]*[Z5]'
         - df_eval:
             - '[over_15_surplus] = [over_15_contains] - [over_15_orders]'
 ###不满意单量（容错值）& 不满意单量（余量）
         - df_eval:
-            - '[dissatisfy_contains] = [vg_daily_order]*[当月总天数]*[Z3]'
+            - '[dissatisfy_contains] = [avg_daily_order]*[当月总天数]*[Z3]'
         - df_eval:
             - '[dissatisfy_surplus] = [dissatisfy_contains] - [dissatisfy_orders]'
 ###配送原因未完成单量（容错值）& 配送原因未完成单量（余量）
         - df_eval:
-            - '[unfinished_contains] = [vg_daily_order]*[当月总天数]*[Z2]'
+            - '[unfinished_contains] = [avg_daily_order]*[当月总天数]*[Z2]'
         - df_eval:
             - '[unfinished_surplus] = [unfinished_contains] - [unfinished_orders]'
 ### 得分
