--- a/yaml/cookbook/tset.yml
+++ b/yaml/cookbook/tset.yml
@@ -399,27 +399,74 @@
 - df_eval:
     - '[avg_daily_order] = [total_order]/[days]'
 ###复合配送准时（容错值）& 复合配送准时（余量）
+- df_to_int:
+    - ordinary_over_time_orders
+- df_to_int:
+    - serious_over_time_orders
 - df_eval:
     - '[punctuality_contains] = [avg_daily_order]*[当月总天数]*[Z1]'
 - df_eval:
     - '[punctuality_surplus] = [punctuality_contains] - 1*[ordinary_over_time_orders] - 5*[serious_over_time_orders]'
 ###提前点送达单量（容错值）& 提前点送达单量（余量）
+- df_to_int:
+    - advance_delivery_orders
 - df_eval:
     - '[advance_delivery_contains] = [avg_daily_order]*[当月总天数]*[Z4]'
 - df_eval:
     - '[advance_delivery_surplus] = [advance_delivery_contains] - [advance_delivery_orders]'
 ###15分钟超时单量（容错值）& 15分钟超时单量（余量）
+- df_to_int:
+    - over_15_orders
 - df_eval:
     - '[over_15_contains] = [avg_daily_order]*[当月总天数]*[Z5]'
 - df_eval:
     - '[over_15_surplus] = [over_15_contains] - [over_15_orders]'
 ###不满意单量（容错值）& 不满意单量（余量）
+- df_to_int:
+    - dissatisfy_orders
 - df_eval:
     - '[dissatisfy_contains] = [avg_daily_order]*[当月总天数]*[Z3]'
 - df_eval:
     - '[dissatisfy_surplus] = [dissatisfy_contains] - [dissatisfy_orders]'
 ###配送原因未完成单量（容错值）& 配送原因未完成单量（余量）
+- df_to_int:
+    - unfinished_orders
 - df_eval:
     - '[unfinished_contains] = [avg_daily_order]*[当月总天数]*[Z2]'
 - df_eval:
     - '[unfinished_surplus] = [unfinished_contains] - [unfinished_orders]'
+### 得分
+- run_py:
+    - |
+      df = to_df(df)
+      df['col_score_dict'] = '0'
+      df['col_score_dict'] = [u'[{"name":"提前点送达得分","score": "%s"},{"name":"15分钟超时占比得分","score": "%s"},{"name":"不满意率得分","score": "%s"},{"name":"配送原因未完成率得分","score": "%s"},{"name":"复核准时率得分","score": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['advance_delivery_score','over_15_ratio_score','dissatisfy_ratio_score','unfinished_ratio_score','punctuality_ratio_score']].to_dict(orient='split')['data'] ]
+      result = df
+### 考核得分
+- run_py:
+    - |
+      df = to_df(df)
+      df['col_orders_dict'] = '0'
+      df['col_orders_dict'] = [u'[{"name":"提前点送达单量","orders": "%s"},{"name":"15分钟超时单量","orders": "%s"},{"name":"不满意单量","orders": "%s"},{"name":"配送原因未完成单量","orders": "%s"},{"name":"一般超时单量","orders": "%s"},{"name":"严重超时单量","orders": "%s"}]' % (a,b,c,d,e,f) for a,b,c,d,e,f in  df[['advance_delivery_orders','over_15_orders','dissatisfy_orders','unfinished_orders','ordinary_over_time_orders','serious_over_time_orders']].to_dict(orient='split')['data'] ]
+      result = df
+### 比率
+- run_py:
+    - |
+      df = to_df(df)
+      df['col_ratio_dict'] = '0'
+      df['col_ratio_dict'] = [u'[{"name":"提前点送达率","ratio": "%s"},{"name":"15分钟超时率","ratio": "%s"},{"name":"不满意率","ratio": "%s"},{"name":"配送原因未完成率","ratio": "%s"},{"name":"复核准时率","ratio": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['advance_delivery_ratio','over_15_ratio','dissatisfy_ratio','unfinished_ratio','punctuality_ratio']].to_dict(orient='split')['data'] ]
+      result = df
+### 容错值
+- run_py:
+    - |
+      df = to_df(df)
+      df['col_contains_dict'] = '0'
+      df['col_contains_dict'] = [u'[{"name":"复核配送准时（容错值）","contains": "%s"},{"name":"提前点送达单量（容错值）","contains": "%s"},{"name":"15分钟超时单量（容错值）","contains": "%s"},{"name":"不满意单量（容错值）","contains": "%s"},{"name":"配送原因未完成单量（容错值）","contains": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['punctuality_contains','advance_delivery_contains','over_15_contains','dissatisfy_contains','unfinished_contains']].to_dict(orient='split')['data'] ]
+      result = df
+### 余量
+- run_py:
+    - |
+      df = to_df(df)
+      df['col_surplus_dict'] = '0'
+      df['col_surplus_dict'] = [u'[{"name":"复核配送准时（余量）","surplus": "%s"},{"name":"提前点送达单量（余量）","surplus": "%s"},{"name":"15分钟超时单量（余量）","surplus": "%s"},{"name":"不满意单量（余量）","surplus": "%s"},{"name":"配送原因未完成单量（余量）","surplus": "%s"}]' % (a,b,c,d,e) for a,b,c,d,e in  df[['punctuality_surplus','advance_delivery_surplus','over_15_surplus','dissatisfy_surplus','dissatisfy_surplus']].to_dict(orient='split')['data'] ]
+      result = df
